sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Franchisee_will_run_FLT__c.field-meta.xml
<CustomField>
    <fullName>Franchisee_will_run_FLT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Franchisee will run FLT?</label>
    <type>Checkbox</type>
</CustomField>