sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Fresh_Life_values_me_as_a_customer__c.field-meta.xml
<CustomField>
    <fullName>Fresh_Life_values_me_as_a_customer__c</fullName>
    <description>Used for customer satisfaction survey</description>
    <label>Fresh Life values me as a  customer?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>