sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Friendly_proper_communication__c.field-meta.xml
<CustomField>
    <fullName>Friendly_proper_communication__c</fullName>
    <label>Friendly &amp; proper communication?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>