sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/From_Bottom_of_Corner_Piece_to_Top_hinge__c.field-meta.xml
<CustomField>
    <fullName>From_Bottom_of_Corner_Piece_to_Top_hinge__c</fullName>
    <label>From Bottom of Corner Piece to Top hinge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>