sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Gap_between_door_and_floor_is_2__c.field-meta.xml
<CustomField>
    <fullName>Gap_between_door_and_floor_is_2__c</fullName>
    <label>Gap between door and floor is 2&quot;</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>