sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Health_and_Safety_Assesment__c.field-meta.xml
<CustomField>
    <fullName>Health_and_Safety_Assesment__c</fullName>
    <label>Health and Safety Assesment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>