sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Highest_price_charged_by_competitors__c.field-meta.xml
<CustomField>
    <fullName>Highest_price_charged_by_competitors__c</fullName>
    <label>Highest price charged by competitors</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>