sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/How_many_toilets__c.field-meta.xml
<CustomField>
    <fullName>How_many_toilets__c</fullName>
    <label>How many toilets</label>
    <length>18</length>
    <type>Text</type>
</CustomField>