sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/How_professional_are_FL_staff__c.field-meta.xml
<CustomField>
    <fullName>How_professional_are_FL_staff__c</fullName>
    <description>Used for the customer satisfaction survey</description>
    <label>How professional are FL staff</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>