sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/How_punctual_are_FL_Waste_Collectors__c.field-meta.xml
<CustomField>
    <fullName>How_punctual_are_FL_Waste_Collectors__c</fullName>
    <description>Used for customer  satisfaction survey</description>
    <label>How punctual are FL Waste Collectors</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>