sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/how_quickly_are_maintenance_acknowledged__c.field-meta.xml
<CustomField>
    <fullName>how_quickly_are_maintenance_acknowledged__c</fullName>
    <description>Used for customer satisfaction survey</description>
    <label>Resolving maintenance or repair issues</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>