sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/How_responsive_is_FL_to_your_questions__c.field-meta.xml
<CustomField>
    <fullName>How_responsive_is_FL_to_your_questions__c</fullName>
    <description>Used for customer satisfaction survey</description>
    <label>How responsive is FL to your questions?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>