sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Installation_End_date__c.field-meta.xml
<CustomField>
    <fullName>Installation_End_date__c</fullName>
    <description>Installation End date</description>
    <label>Installation End date</label>
    <type>Date</type>
</CustomField>