sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Installation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Start_Date__c</fullName>
    <description>Installation Start Date</description>
    <label>Installation Start Date</label>
    <type>Date</type>
</CustomField>