sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Is_land_available__c.field-meta.xml
<CustomField>
    <fullName>Is_land_available__c</fullName>
    <label>Is land available</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don&#39;t know</fullName>
            </value>
            <value>
                <fullName>Refuse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>