sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Is_location_secure__c.field-meta.xml
<CustomField>
    <fullName>Is_location_secure__c</fullName>
    <label>Is location secure?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>