sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Is_someone_responsible_for_cleaning__c.field-meta.xml
<CustomField>
    <fullName>Is_someone_responsible_for_cleaning__c</fullName>
    <description>Mystery Loo-- Schools</description>
    <label>Is someone responsible for cleaning?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>