sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Is_the_Logo_Level__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Logo_Level__c</fullName>
    <label>Is the Logo Level?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>