sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Is_the_roof_clean__c.field-meta.xml
<CustomField>
    <fullName>Is_the_roof_clean__c</fullName>
    <description>Mystery Loo - Schools</description>
    <label>Is the roof clean?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>