sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Is_there_Paint_on_the_Roof_or_formwork__c.field-meta.xml
<CustomField>
    <fullName>Is_there_Paint_on_the_Roof_or_formwork__c</fullName>
    <label>Is there Paint on the Roof or formwork?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>