sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Is_there_space_available_for_an_event__c.field-meta.xml
<CustomField>
    <fullName>Is_there_space_available_for_an_event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is there space available for an event?</label>
    <type>Checkbox</type>
</CustomField>