sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Issues_Addressed__c.field-meta.xml
<CustomField>
    <fullName>Issues_Addressed__c</fullName>
    <inlineHelpText>Please enter the issues that were addressed.</inlineHelpText>
    <label>Issues addressed</label>
    <type>TextArea</type>
</CustomField>