sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Issues_raised__c.field-meta.xml
<CustomField>
    <fullName>Issues_raised__c</fullName>
    <inlineHelpText>Please enter the issues raised this week</inlineHelpText>
    <label>Issues Raised</label>
    <type>TextArea</type>
</CustomField>