sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Issues_raised_last_week__c.field-meta.xml
<CustomField>
    <fullName>Issues_raised_last_week__c</fullName>
    <inlineHelpText>Please enter the issues raised last week.</inlineHelpText>
    <label>Issues raised last week</label>
    <type>TextArea</type>
</CustomField>