sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Latch_and_Lock_is_on_straight__c.field-meta.xml
<CustomField>
    <fullName>Latch_and_Lock_is_on_straight__c</fullName>
    <label>Latch and Lock is on straight</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>