sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Location_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Location_Assessment__c</fullName>
    <label>Location Assessment Accessibility Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>