sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Location_Assessment_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Location_Assessment_Total_Score__c</fullName>
    <label>Location Assessment Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>