sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/logo_pricing_conform_to_options__c.field-meta.xml
<CustomField>
    <fullName>logo_pricing_conform_to_options__c</fullName>
    <label>logo &amp; pricing conform to options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>