sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Logo_pricing_placements_conform_to_scena__c.field-meta.xml
<CustomField>
    <fullName>Logo_pricing_placements_conform_to_scena__c</fullName>
    <label>Logo&amp;pricing placements conform to scena</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>