sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Lowest_Price_Charged_by_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Lowest_Price_Charged_by_Competitors__c</fullName>
    <label>Lowest Price Charged by Competitors</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>