sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Loyalty_Vouchers__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Vouchers__c</fullName>
    <label>Loyalty Vouchers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>