sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Male_Users__c.field-meta.xml
<CustomField>
    <fullName>Male_Users__c</fullName>
    <formula>( Customers_Boys__c + Customers_Men__c ) /  Total_Customers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Male Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>