sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Manufacturing_lead_signed_off_parts__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_lead_signed_off_parts__c</fullName>
    <label>Manufacturing lead signed off parts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>