sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Marketing_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Marketing Assessment Report</description>
    <label>Marketing Assessment</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Marketing Assessment Report</relationshipLabel>
    <relationshipName>Field_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>