sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Marketing_Team_to_your_requests_for_mark__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Team_to_your_requests_for_mark__c</fullName>
    <description>Used for customer satisfaction survey</description>
    <label>Marketing Team response to your requests</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>