sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Measure_gaps_on_both_sides_of_the_door__c.field-meta.xml
<CustomField>
    <fullName>Measure_gaps_on_both_sides_of_the_door__c</fullName>
    <label>Measure gaps on both sides of the door</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>