sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <description>Date of meeting</description>
    <inlineHelpText>Please enter the meeting date</inlineHelpText>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>