sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Mirror_alignment_and_placement__c.field-meta.xml
<CustomField>
    <fullName>Mirror_alignment_and_placement__c</fullName>
    <label>Mirror alignment and placement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>