sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/MLU_Score__c.field-meta.xml
<CustomField>
    <fullName>MLU_Score__c</fullName>
    <description>Automatically updated by workflow rule</description>
    <inlineHelpText>Leave blank.</inlineHelpText>
    <label>MLU Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>