sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Mop_Bucket_There__c.field-meta.xml
<CustomField>
    <fullName>Mop_Bucket_There__c</fullName>
    <label>Mop &amp; Bucket There?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>