sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Mystery_Loo_Report__c.field-meta.xml
<CustomField>
    <fullName>Mystery_Loo_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Mystery Loo Reports</description>
    <label>Mystery Loo Report</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Mystery Loo Report</relationshipLabel>
    <relationshipName>Field_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>