sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <inlineHelpText>Please enter next steps for dealing with challenges</inlineHelpText>
    <label>Next Steps</label>
    <type>TextArea</type>
</CustomField>