sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Other_comments__c.field-meta.xml
<CustomField>
    <fullName>Other_comments__c</fullName>
    <inlineHelpText>Please enter any other comments from the meeting with the FLO</inlineHelpText>
    <label>Other comments</label>
    <type>TextArea</type>
</CustomField>