sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Other_institutions__c.field-meta.xml
<CustomField>
    <fullName>Other_institutions__c</fullName>
    <label>Other institutions and names</label>
    <type>TextArea</type>
</CustomField>