sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Other_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Notes__c</fullName>
    <label>Other Notes</label>
    <type>TextArea</type>
</CustomField>