sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Percent_Plots_toilets__c.field-meta.xml
<CustomField>
    <fullName>Percent_Plots_toilets__c</fullName>
    <label>% Plots nearby with toilet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>