sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Physical_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Physical_Location_Type__c</fullName>
    <label>Physical location type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>At entry point to slum</fullName>
            </value>
            <value>
                <fullName>In a plot—hidden</fullName>
            </value>
            <value>
                <fullName>In a plot—visible</fullName>
            </value>
            <value>
                <fullName>In a building—hidden</fullName>
            </value>
            <value>
                <fullName>In a building—visible</fullName>
            </value>
            <value>
                <fullName>On a road</fullName>
            </value>
            <value>
                <fullName>On a well-travelled path</fullName>
            </value>
            <value>
                <fullName>On interior path</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>