sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Posters__c.field-meta.xml
<CustomField>
    <fullName>Posters__c</fullName>
    <label>Posters</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>