sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Presence_at_toilet__c.field-meta.xml
<CustomField>
    <fullName>Presence_at_toilet__c</fullName>
    <label>Presence at toilet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>