sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Quality_Inspection_Completed_by__c.field-meta.xml
<CustomField>
    <fullName>Quality_Inspection_Completed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person who conducted the quality check inspection</description>
    <label>Quality Inspection Completed by:</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Field Reports</relationshipLabel>
    <relationshipName>Field_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>