sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Quality_Standards_Score__c.field-meta.xml
<CustomField>
    <fullName>Quality_Standards_Score__c</fullName>
    <description>MLU Quality Standards Score</description>
    <label>Quality Standards Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>