sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/QuantitySignedOut_InventoryRequirements__c.field-meta.xml
<CustomField>
    <fullName>QuantitySignedOut_InventoryRequirements__c</fullName>
    <label>QuantitySignedOut=InventoryRequirements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>