sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Respected_Details__c.field-meta.xml
<CustomField>
    <fullName>Respected_Details__c</fullName>
    <label>Details</label>
    <type>TextArea</type>
</CustomField>