sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Roof_Nails_cut_off__c.field-meta.xml
<CustomField>
    <fullName>Roof_Nails_cut_off__c</fullName>
    <label>Roof Nails cut off?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>