sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Runs_another_business__c.field-meta.xml
<CustomField>
    <fullName>Runs_another_business__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does franchisee run another business?</inlineHelpText>
    <label>Runs another business?</label>
    <type>Checkbox</type>
</CustomField>